--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <div class="text-block">Text Block 2</div>
                         <div class="text-block">Text Block 3</div>
                     </div>
-                    <div id="fixed-labels-container"></div>
+                    <div id="fixed-labels-container" class="hidden"></div>
                 </div>
                 <div class="row row-2">
 
