add highlighting to boxes

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="column column-2">
                 <div class="row row-1">
                     <!-- <div class="dynamicChartName">Název</div> -->
-
+                    <div id="brush-tooltip" class="brush-tooltip"></div>
                     <div id="my_dataviz"><span class="mainChart-label">
                             <div class="toggleButtonWrapper">
                                 <button id="toggleButton">See More</button>
