--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/table.css">
     <link rel="stylesheet" href="css/linechart.css">
     <link rel="stylesheet" href="css/toggleButton.css">
-    <!-- <link rel="stylesheet" href="css/popup.css"> -->
+    <link rel="stylesheet" href="css/brush.css">
 
     <!-- <link rel="stylesheet" href="css/newCSS.css"> -->
 
