--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <input type="radio" id="time" name="visualization" value="time" checked>
                         <label for="time">Time</label>
                         <input type="radio" id="name" name="visualization" value="name">
-                        <label for="name">Name</label>
+                        <label for="name">Type</label>
                     </div>
                     <div id="color-visualization" style="display:none;">
                         <div id="color-scale" class="color-scale"></div>
@@ -78,8 +78,8 @@
                         <label for="time-filter">Filter by Time:</label>
                         <div class="time-filter">
                             <select id="time-filter" name="time">
-                                <option value="past-7-days">Past 7 Days</option>
-                                <option value="past-30-days" selected>Past 30 Days</option>
+                                <option value="past-7-days">Last 7 Days</option>
+                                <option value="past-30-days" selected>Last 30 Days</option>
                                 <option value="custom">Custom</option>
                             </select>
                             <div class="custom-time" id="custom-time">
