Layout fixes, scroll added to filters, bug when choosing filters fixed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="filter">
-                    <div class="filterHeader">Choose time and events</div>
+                    <div class="filterHeader">Choose time and events types</div>
                     <div class="filterBox">
                         <label for="time-filter">Filter by Time:</label>
                         <div class="time-filter">
