--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="js/dataHandling/dataArray.js"></script>
     <script src="js/dataFiltering/dataFiltering.js"></script>
     <script src="js/constants/constants.js"></script>
+    <script src="js/constants/colors.js"></script>
     <script src="js/map/map.js"></script>
     <script src="js/map/selection.js"></script>
     <script src="js/table/table.js"></script>
