playing with colors

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     <div class="filterHeader">Choose visualization type</div>
                     <div class="change-name-time" id="change-name-time">
                         <input type="radio" id="time" name="visualization" value="time" checked>
-                        <label for="time">Time</label>
+                        <label for="time">By time</label>
                         <input type="radio" id="name" name="visualization" value="name">
-                        <label for="name">Type</label>
+                        <label for="name">By type</label>
                     </div>
                     <div id="color-visualization" style="display:none;">
                         <div id="color-scale" class="color-scale"></div>
